# CellPyAbility

./: # CellProfiler_test.py  .gitattributes  .gitignore  20240903_DLD1_B2_CB1954_counts.csv  20241110_CellPyAbility_draft.docx  CHANGELOG.md  CONTRIBUTING.md  CellProfilerLicense.txt  CellPyAbility.cppipe  CellPyAbilitySlow.cppipe  CellPyAbility_GDA.py  CellPyAbility_simple.py  CellPyAbility_synergy.py  CropSpeckleID.cppipe  GDA_analysis.ipynb  GDA_flowchart.drawio  GDA_synergy_local_v2.1.py  MANIFEST.in  PYPI_UPLOAD_GUIDE.md  README.md  config.csv  full_environment.yml  greatest GDA.cppipe  nuclei_count_to_xyplot_local_v1.2.1.py  nuclei_count_to_xyplot_local_v1.2.py  pyproject.toml  requirements.txt  synergy_flowchart.drawio  todo.txt  ~$241110_CellPyAbility_draft.docx  ~WRL0790.tmp
20240903_DLD1_B2_CB1954/: B10_-1_1_1_Stitched[DAPI 377,447]_001.tif  B11_-1_1_1_Stitched[DAPI 377,447]_001.tif  B3_-1_1_1_Stitched[DAPI 377,447]_001.tif  B5_-1_1_1_Stitched[DAPI 377,447]_001.tif  B6_-1_1_1_Stitched[DAPI 377,447]_001.tif  B9_-1_1_1_Stitched[DAPI 377,447]_001.tif  C10_-1_1_1_Stitched[DAPI 377,447]_001.tif  C4_-1_1_1_Stitched[DAPI 377,447]_001.tif  C6_-1_1_1_Stitched[DAPI 377,447]_001.tif  C7_-1_1_1_Stitched[DAPI 377,447]_001.tif  C8_-1_1_1_Stitched[DAPI 377,447]_001.tif  D11_-1_1_1_Stitched[DAPI 377,447]_001.tif  D2_-1_1_1_Stitched[DAPI 377,447]_001.tif  D5_-1_1_1_Stitched[DAPI 377,447]_001.tif  D8_-1_1_1_Stitched[DAPI 377,447]_001.tif  D9_-1_1_1_Stitched[DAPI 377,447]_001.tif  E10_-1_1_1_Stitched[DAPI 377,447]_001.tif  E11_-1_1_1_Stitched[DAPI 377,447]_001.tif  E2_-1_1_1_Stitched[DAPI 377,447]_001.tif  E3_-1_1_1_Stitched[DAPI 377,447]_001.tif  E4_-1_1_1_Stitched[DAPI 377,447]_001.tif  E5_-1_1_1_Stitched[DAPI 377,447]_001.tif  F11_-1_1_1_Stitched[DAPI 377,447]_001.tif  F2_-1_1_1_Stitched[DAPI 377,447]_001.tif  F6_-1_1_1_Stitched[DAPI 377,447]_001.tif  F8_-1_1_1_Stitched[DAPI 377,447]_001.tif  G10_-1_1_1_Stitched[DAPI 377,447]_001.tif  G11_-1_1_1_Stitched[DAPI 377,447]_001.tif  (+4 more)
(+201 files in other folders)
